scrolling now works better